--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyTestLink</string>
+    <string name="adress_name">Adress</string>
+    <string name="port_name">Port</string>
+    <string name="check_link">Check</string>
 </resources>
